[project]
name = "nla-example"
version = "0.1.0"
description = "Example for numerical linear algebra."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipytest>=0.14.2",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
]
